--- a/templates/election_app/index.html
+++ b/templates/election_app/index.html
@@ -10,7 +10,7 @@
         <div class="content">
             <!-- Left Section: Image -->
             <div class="left-section">
-                <img class="main-image" src="{% static 'images/lets_vote.svg' %}" alt="Main Image">
+                <img class="main-image" src="{% static 'images/lets_vote.png' %}" alt="Main Image">
             </div>
 
             <!-- Right Section: Text and Buttons -->
