--- a/election_app/static/css/elections.css
+++ b/election_app/static/css/elections.css
@@ -39,6 +39,7 @@
     margin-bottom: 15px;
     padding: 0 20px;
     color: black;
+
 }
 
 /* Texte des cartes */
@@ -72,3 +73,71 @@
     background-color: lightgreen; /* Couleur au survol (modifiable) */
 }
 
+ /* Modal styles */
+        .modal-election {
+            display: none; /* Hidden by default */
+            position: fixed;
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0); /* Black with opacity */
+            background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+            padding-top: 60px;
+        }
+
+        .modal-content-election {
+            background-color: #001124;
+            margin: 5% auto;
+            padding: 40px;
+            border: 1px solid #888;
+            width: 70%;
+            max-width: 600px;
+        }
+
+        .close-election {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close-election:hover,
+        .close-election:focus {
+            color: red;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Modal Form Styles */
+        .modal-form-election input, .modal-form-election textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .modal-form-election button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .modal-form-election button:hover {
+            background-color: #45a049;
+        }
+
+        .error-message {
+            color: red;
+            font-size: 0.9em;
+            margin-top: 5px;
+        }
+.card-link{
+    text-decoration: none;
+}
