Create Election done

--- a/election_app/static/css/about.css
+++ b/election_app/static/css/about.css
@@ -1,7 +1,7 @@
 /* Style CSS pour la page About */
 
 .about-container {
-    width: 1440px;
+    width: 100%;
     height: 1024px;
     padding-top: 178px;
     padding-bottom: 178px;
